--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@mui/x-charts": "^7.28.0",
     "@reach/router": "^1.3.4",
     "@types/gatsbyjs__reach-router": "^2.0.5",
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/leaflet": "^1.9.17",
     "@types/reach__router": "^1.3.15",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
